# habernexus

./: .bandit  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CHANGELOG_v10.2.md  CHANGELOG_v10.md  CICD_ANALYSIS_REPORT.md  CICD_ERRORS_ANALYSIS.md  CICD_FINAL_REPORT.md  CICD_FIX_REPORT.md  CICD_IMPROVEMENT_PLAN.md  CODE_CONFIGURATION_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_ERROR_ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CONTENT_SYSTEM_IMPROVEMENT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT_FIXES_PLAN.md  DEVELOPMENT_PLAN_v10.md  DEVELOPMENT_REPORT_v10.2.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_IMPROVEMENTS_REPORT.md  DOCUMENTATION_QA_REPORT.md  Dockerfile  ERROR_FIX_GUIDE.md  FINAL_COMPLETION_REPORT.md  GITHUB_SECRETS_VARIABLES_REPORT.md  HABERNEXUS_ANALYSIS_AND_ROADMAP.md  HaberNexus_Analysis_Report.md  IMPROVEMENT_PLAN.md  INSTALLATION_GUIDE_v7.md  INSTALLATION_SCRIPTS_README.md  INSTALLATION_SYSTEM_DESIGN.md  (+41 more)
.backups/habernexus_backup_20251206_090605/: .env.backup  backup.info  database.sqlite3
.github/: dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: auto-issue.yml  auto-release.yml  ci-cd.yml  ci.yml  deploy.yml  issue-management.yml  labeler.yml  pr-automation.yml  project-automation.yml  release.yml  security.yml  stale.yml  sync-labels.yml  version-sync.yml  weekly-report.yml
api/: __init__.py  apps.py  pagination.py  permissions.py  serializers.py  tests.py  tests_comprehensive.py  urls.py  views.py
app/habernexus/: admin_dashboard.py
archive/: README.md
archive/docs/: COMPLETION_PLAN.md  DEBUGGING_REPORT_v10.1.md  RESEARCH_NOTES.md
archive/old_docs_20251218/: ARCHITECTURE.md  CICD.md  CONFIGURATION.md  CONTENT_SYSTEM.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  INSTALLATION_GUIDE_v4.md  INSTALLATION_v7.md  INSTALLATION_v8.md  TROUBLESHOOTING.md  USER_GUIDE.md
archive/old_docs_20251218/archive/: DEVELOPMENT_PROGRESS_REPORT.md  INSTALLATION_ISSUES_AND_SOLUTIONS.md  VM_KURULUM_REHBERI.md  VM_TASIMA_REHBERI.md
archive/old_docs_20251218/images/: system_architecture.mmd
archive/old_docs_20251218/tr/: CONFIGURATION.md  INSTALLATION.md
archive/scripts/: install_v5.sh  install_v8.sh  pre_install_check.sh
authors/: admin.py  models.py
authors/migrations/: 0001_initial.py
authors/tests/: test_models.py
caddy/: Caddyfile  Caddyfile.ip.template  Caddyfile.template  Dockerfile
cloudflared/: config.yml  config.yml.template
config/: docker-compose.npm.yml  docker-compose.tunnel.yml  gunicorn_config.py  habernexus-celery-beat.service  habernexus-celery.service  habernexus.service  nginx.conf  nginx_production.conf  production_settings.py  prometheus.yml
core/: admin.py  error_tracking.py  exceptions.py  health.py  logging_config.py  middleware.py  models.py  tasks.py  urls.py  views.py  views_migration.py
core/management/commands/: create_migration_token.py
core/migrations/: 0001_initial.py
core/tests/: test_middleware.py  test_models.py  test_tasks.py  test_views.py
docs/: API.md  ARCHITECTURE.md  CI_CD_FIX_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  FAQ.md  FINAL_DEVELOPMENT_REPORT.md  GITHUB_ACTIONS_SUCCESS_REPORT.md  INSTALLATION.md  MONITORING.md  RESEARCH_FINDINGS.md  SCRIPTS.md  USER_GUIDE.md
docs/archive/: DEVELOPMENT_PLAN.md  DOCUMENTATION_ANALYSIS.md  IMPROVED_CONTENT_SYSTEM_DESIGN.md  IMPROVEMENTS_SUMMARY.md  KURULUM_VE_INCELEME_RAPORU.md  SETUP_SCRIPT_OZET.md
docs/images/: content_pipeline.mmd  database_schema.mmd
docs/tr/: DEPLOYMENT.md  DEVELOPMENT.md  FAQ.md  QUICK_START.md  TROUBLESHOOTING.md
docs/wiki/: API-Dokumentasyonu.md  Architecture-and-Structure.md  Developer-Guide.md  Gelistirici-Rehberi.md  Home.md  Installation-Guide.md  Kurulum-Rehberi.md  Mimari-ve-Yapi.md  Sorun-Giderme.md  Yapilandirma.md  _Footer.md  _Sidebar.en.md  _Sidebar.md
habernexus_config/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
news/: __init__.py  admin.py  admin_extended.py  admin_newsletter.py  cache_utils.py  content_utils.py  documents.py  media_processor.py  models.py  models_advanced.py  models_extended.py  models_newsletter.py  monitoring.py  quality_monitoring.py  quality_utils.py  sitemaps.py  tasks.py  tasks_advanced.py  tasks_newsletter.py  tasks_v2.py  urls.py  views.py  views_newsletter.py
news/migrations/: 0001_initial.py  0002_articleclassification_contentqualitymetrics_and_more.py
news/tests/: test_cache_utils.py  test_content_generation_v2.py  test_models.py  test_tasks.py  test_tasks_comprehensive.py  test_tasks_genai.py  test_tasks_v2_coverage.py  test_views.py
nginx/: nginx.conf
nginx/conf.d/: habernexus.conf  habernexus_tunnel.conf
scripts/: backup-full.sh  backup.sh  cleanup.sh  cleanup_env.sh  cloudflare_api.sh  cloudflare_dns_setup.sh  create_admin.py  deploy.sh.old  diagnostics.sh  health-check.sh  init-vm.sh  install.sh  manual-setup.sh  migrate-vm-auto.sh  migrate-vm.sh  migrate_server.sh  restore-full.sh  restore.sh  setup-dev.sh  setup.sh  setup_v3.sh
static/: robots.txt
templates/: about.html  article_detail.html  article_list.html  author_detail.html  base.html  category.html  contact.html  home.html  maintenance.html  privacy_policy.html  search.html  tag_detail.html  terms_of_service.html
templates/admin/: api_settings.html
templates/emails/: daily_newsletter.html  newsletter_verification.html
templates/newsletter/: error.html  unsubscribe_confirm.html  unsubscribed.html  verified.html
tests/: test_installation.sh  test_v6.sh
wiki_docs/: API-Documentation.md  API-Dokumentasyonu.md  Configuration.md  Home.en.md  Troubleshooting.md
