[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habernexus"
version = "10.9.0"
description = "Advanced news aggregation and content generation platform with AI-powered features"
authors = [{name = "Salih TANRISEVEN", email = "salihtanriseven25@gmail.com"}]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["news", "aggregation", "ai", "django", "celery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

[project.urls]
Homepage = "https://habernexus.com"
Repository = "https://github.com/sata2500/habernexus"
Documentation = "https://github.com/sata2500/habernexus/blob/main/docs/INSTALLATION.md"

# ============================================================================
# RUFF - Modern Python Linter & Formatter (replaces flake8, isort, black)
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["ALL"]
"*/tests/*" = ["ARG", "PLR2004"]
"conftest.py" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["core", "news", "authors", "habernexus_config"]
known-third-party = ["django", "celery", "redis"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# BLACK - Code Formatter (kept for compatibility)
# ============================================================================

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | __pycache__
  | \.eggs
  | \.egg
  | build
  | dist
  | node_modules
)/
'''

# ============================================================================
# ISORT - Import Sorting (kept for compatibility)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*", ".venv", "venv", ".git", "node_modules"]
known_django = ["django"]
known_first_party = ["core", "news", "authors", "habernexus_config"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# PYTEST - Testing Framework
# ============================================================================

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "habernexus_config.settings_test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=news",
    "--cov=core",
    "--cov=authors",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
testpaths = ["core/tests", "news/tests", "authors/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================

[tool.coverage.run]
source = ["core", "news", "authors"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "manage.py",
    "*/admin.py",
    "*/apps.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "\\.\\.\\.",
]
ignore_errors = true
precision = 2
fail_under = 60
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# MYPY - Static Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.tests.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "habernexus_config.settings"

# ============================================================================
# PYLINT - Code Analysis
# ============================================================================

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "habernexus_config.settings"

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
    "C0302",  # too-many-lines
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0904",  # too-many-public-methods
    "W0703",  # broad-except
    "C0301",  # line-too-long
    "E1101",  # no-member (Django models)
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-locals = 20
max-branches = 15
max-statements = 50

# ============================================================================
# BANDIT - Security Linting
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv", "venv"]
skips = ["B101", "B311"]  # assert_used, random

[tool.bandit.assert_used]
skips = ["*_test.py", "*tests.py"]
